fix alignment and shortened nav buttons

--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -1,3 +1,7 @@
+.image {
+  text-align: center;
+}
+
 .text {
   margin: 1rem;
 }
@@ -36,7 +40,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      text-align: left;
     }
   }
 }
